bk_ida/gccida/c3/real_onep
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/real_onep/src/tree.c:1511:14: error: expected identifier or '('
 struct expr = expr->vector.elements; 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/real_onep/src/tree.c:1512:7: error: expected expression
if (  struct expr == ( tree)global_trees 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/real_onep/src/tree.c:1521:12: error: expected expression
*( _OWORD *)x.r = *( _OWORD *)&expr->block.vars; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/real_onep/src/tree.c:1521:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)x.r = *( _OWORD *)&expr->block.vars; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/real_onep/src/obj/tree.o] Error 1
